--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,7 +7,7 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  tests-on-phpunit-101:
+  tests:
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
@@ -19,7 +19,7 @@ jobs:
           - 8.1
           - 8.2
         phpunit:
-          - "10.1.x"
+          - "~10.1.0"
         dependencies:
           - "highest"
           - "lowest"
@@ -66,7 +66,7 @@ jobs:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.os == 'windows-latest'
 
-  tests-on-phpunit-100:
+  tests-without-configuration:
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
@@ -78,7 +78,8 @@ jobs:
           - 8.1
           - 8.2
         phpunit:
-          - "10.0.x"
+          - "~10.0.0"
+          - "~9.6.0"
         dependencies:
           - "highest"
           - "lowest"
@@ -124,54 +125,3 @@ jobs:
           RAY_ENABLED: false
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.os == 'windows-latest'
-
-  tests-on-phpunit-9:
-    runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.experimental }}
-    strategy:
-      matrix:
-        os:
-          - "ubuntu-latest"
-          - "windows-latest"
-        php:
-          - 8.1
-          - 8.2
-        phpunit:
-          - "9.6.x"
-        dependencies:
-          - "highest"
-          - "lowest"
-        experimental:
-          - false
-
-    name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, intl, fileinfo
-          coverage: none
-
-      - name: Install PHPUnit ${{ matrix.phpunit }}
-        run: |
-          composer require "phpunit/phpunit:${{ matrix.phpunit }}" --no-interaction --no-update
-
-      - name: Install dependencies
-        uses: "ramsey/composer-install@v2"
-        with:
-          dependency-versions: "${{ matrix.dependencies }}"
-          composer-options: "--prefer-dist --no-cache"
-
-      - name: Installed dependencies
-        run: |
-          composer show -D
-
-      - name: Execute tests
-        run: vendor/bin/phpunit --exclude-group deprecations --no-coverage --no-configuration --dont-report-useless-tests --bootstrap vendor/autoload.php tests
-        env:
-          RAY_ENABLED: false
