--- a/.github/workflows/strict-tests.yaml
+++ b/.github/workflows/strict-tests.yaml
@@ -53,6 +53,6 @@ jobs:
           composer show -D
 
       - name: Execute tests (with deprecations)
-        run: vendor/bin/phpunit --fail-on-warnings --fail-on-deprecations --fail-on-notices
+        run: vendor/bin/phpunit --fail-on-warning --fail-on-deprecation --fail-on-notice
         env:
           RAY_ENABLED: false
