--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -2,9 +2,18 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=AckfSECXIvnK5r28GVIWUAxmbBSjTsmF
 APP_DEBUG=true
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
+APP_LOCALE=en
+APP_FALLBACK_LOCALE=en
+APP_FAKER_LOCALE=en_US
+
+APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=redis
+
 LOG_CHANNEL=stack
+LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
@@ -24,6 +33,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
+REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
