--- a/.github/workflows/strict-tests.yaml
+++ b/.github/workflows/strict-tests.yaml
@@ -26,6 +26,8 @@ jobs:
           - false
         include:
           - php: 8.3
+            phpunit: ["~10.2.0"]
+            dependencies: "highest"
             experimental: true
 
 
