--- a/.github/workflows/strict-tests.yaml
+++ b/.github/workflows/strict-tests.yaml
@@ -26,7 +26,7 @@ jobs:
           - false
         include:
           - php: 8.3
-            phpunit: ["~10.2.0"]
+            phpunit: "~10.2.0"
             dependencies: "highest"
             experimental: true
 
